<resources>
    <string name="app_name">Music</string>
    <string name="others">others</string>
    <string name="setting">setting</string>
    <string name="verified">verified</string>
    <string name="home">home</string>
    <string name="friend">friend</string>
    <string name="follow">follow</string>
    <string name="ticket">ticket</string>
    <string name="gift">gift</string>
    <string name="clock">clock</string>
    <string name="location">location</string>
    <string name="scan">scan</string>
    <string name="album">album</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="comepazzo">comepazzo</string>
</resources>