<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/menuFriend"
        android:icon="@drawable/friend"
        android:title="@string/friend"/>
    <item
        android:id="@+id/menuFollow"
        android:icon="@drawable/follow"
        android:title="@string/follow"/>
    <item
        android:id="@+id/menuTicket"
        android:icon="@drawable/ticket"
        android:title="@string/ticket"/>
    <item
        android:id="@+id/menuGift"
        android:icon="@drawable/gift"
        android:title="@string/gift"/>

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/menuScan"
                android:icon="@drawable/scan"
                android:title="@string/scan"/>
            <item
                android:id="@+id/menuClock"
                android:icon="@drawable/clock"
                android:title="@string/clock"/>
            <item
                android:id="@+id/menuLocation"
                android:icon="@drawable/location"
                android:title="@string/location"/>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/setting"
                android:title="@string/setting"/>
        </menu>

    </item>

</menu>